MoveSamplers documented in integration.ini

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -102,17 +102,29 @@ initialArrangement = lattice default
 # The number of molecules to be simulated
 numOfParticles = 1000
 
-# The initial step size for translational moves - each component of translation vector will be sampled uniformly from
-# [-"positionStepSize", "positionStepSize"] interval. The step size will be adjusted dynamically during thermalization
-# phase so that acceptance ratio is around 0.15.
-positionStepSize = 10
-
-# The initial step size for rotational moves - rotation is performed around a random axis by an angle uniformly sampled
-# from [-"rotationStepSize", "rotationStepSize"] interval. Rotation step size is adjusted dynamically in a similar
-# fashion to the translational one. Those two are always adjusted simultaneously by the same factor, so they ratio stays
-# constant. The ratio can be selected heuristically by benchmarking, or using a rule of thumb: maximal rotation should
-# move the furthest part of the particle by the same amount as the maximal translation.
-rotationStepSize = 0.1
+# Comma-separated list of molecule move types that should be performed during the run. Given the number of molecules in
+# the system, each move type declares how many moves should be performed. Move type is sampled at random so that during
+# each cycles the average number of moves of a given type matches the declaration. Most move types support dynamic
+# changes of step sizes to reach target acceptance rate. Supported move type are as follows:
+# 1. "translation [initial step size] ([max step size])"
+#    Performs a translation for a randomly selected molecule. Each translation coordinate is independently selected
+#    uniformly from an interval [-"[step size]", "[step size]"] ("[step size]" is initialized from
+#    "[initial step size]"). If specified, "[step size]" is capped from above by "[max step size]". In a single cycle
+#    each particle is perturbed on average once.
+# 2. "rotation [initial angle]"
+#    Performs a rotation of a randomly selected molecule. Rotation is done around a random axis by an angle sampled
+#    uniformly from an interval [-"[angle]", "[angle]"] ("[angle]" is initialized from "[initial angle]"). In a single
+#    cycle each particle is perturbed on average once.
+# 3. "rototranlslation [initial step size] [initial angle] ([max step size])"
+#    Performs simultaneous translation and rotation of a randomly selected molecule. The way of sampling and parameter
+#    names are the same as for "translation" and "rotation" moves. Both: translation and rotation step sizes are always
+#    adjusted simultaneously by the same factor, so they ratio stays constant. The ratio can be selected heuristically
+#    by benchmarking, or using a rule of thumb: maximal rotation should move the furthest part of the particle by the
+#    same amount as the maximal translation.
+# 4. "flip ([flip every])"
+#    Performs a rotation by 180 degrees of a random particle around its secondary axis. During one cycle
+#    1 / "[flip every]" fraction of particles is flipped (if not specified, "[flip every]" defaults to 10).
+moveTypes = translation 10
 
 # The maximal size of the volume move and the type of the scaling. Notice that some types allow independent moves for
 # some or all sides which allows to relax the diagonal part of stress tensor (directional pressures). Alternatives for
