--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -108,9 +108,9 @@ numOfParticles = 1000
 # changes of step sizes to reach target acceptance rate. Supported move type are as follows:
 # 1. "translation [initial step size] ([max step size])"
 #    Performs a translation for a randomly selected molecule. Each translation coordinate is independently selected
-#    uniformly from an interval [-"[step size]", "[step size]"] ("[step size]" is initialized from
-#    "[initial step size]"). If specified, "[step size]" is capped from above by "[max step size]". In a single cycle
-#    each particle is perturbed on average once.
+#    from a uniform interval [-"[step size]", "[step size]"] ("[step size]" is initialized from "[initial step size]").
+#    If specified, "[step size]" is capped from above by "[max step size]". In a single cycle each particle is perturbed
+#    on average once.
 # 2. "rotation [initial angle]"
 #    Performs a rotation of a randomly selected molecule. Rotation is done around a random axis by an angle sampled
 #    uniformly from an interval [-"[angle]", "[angle]"] ("[angle]" is initialized from "[initial angle]"). In a single
