Final refactoring and documentation

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -310,6 +310,10 @@ outputFilename = out.txt
 # of observables.
 observableSnapshotFilename = observable_gas.txt
 
+# If not empty, trajectories of the particles will be stored in a compact binary RAMTRJ format. It then can be replayed
+# for example to calculate different observables. Not all cycles are stored - it is done every "snapshotEvery" cycles.
+recordingFilename = recording_gas.ramtrj
+
 # The observables which should be computed during simulation. Each observables is in the format
 # "([scope]) [observable name] ([observable-dependent parameters])"
 #
@@ -403,6 +407,7 @@ packingFilename = packing_liquid.dat
 wolframFilename = packing_liquid.nb
 outputFilename = out.txt
 observableSnapshotFilename = observable_liquid.txt
+recordingFilename = recording_liquid.ramtrj
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 [integration.solid]
@@ -416,4 +421,5 @@ packingFilename = packing_solid.dat
 wolframFilename = packing_solid.nb
 outputFilename = out.txt
 observableSnapshotFilename = observable_solid.txt
+recordingFilename = recording_solid.ramtrj
 observables = numberDensity , inline packingFraction , compressibilityFactor
