Documentation and more refactoring

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -382,15 +382,25 @@ recordingFilename = recording_gas.ramtrj
 #    absolute value of smectic tau parameter (normalized by number density - 1 means maximal smectic order). The
 #    tau value depends on the wavevector of smectic order parameter. Here, the one giving the highest value of taus
 #    is selected from all PBC-compatible alternatives given by:
-#    k = (k_x, k_y, k_z),
-#    k_alpha = 2 pi n_alpha / L_alpha (alpha = x, y, z),
-#    where L_alpha is the length of box side alpha, while n_alpha is an integer from the interval
-#    [-"[n_alpha max]", "[n_alpha max]"] - the maximal length of the wavevector is controlled by an optional parameter
-#   "[n_alpha max]". If it is not specified, it defaults to 5. Constituent values:
+#    k = sum_alpha (n_alpha * g_alpha),
+#    where g_alpha are reciprocal lattice vectors (which the box being the unit cell), while n_alpha are Miller indices
+#    taken from [-"[n_alpha max]", "[n_alpha max]"] - the maximal length of the wavevector is controlled by an optional
+#    parameter "[n_alpha max]". If it is not specified, it defaults to 5. Constituent values:
 #    8.1. "tau"
 #         absolute value of smectic order parameter; INTERVAL VALUE
 #    8.2. "k_tau"
 #         the wavevector of smetcic order parameter in the format "[n_x].[n_y].[n_z]"; NOMINAL VALUE
+# 9. "bondOrder [Miller indices] [rank 1] [rank 2] ..."
+#    bond order parameter of a given rank "r" is computed by finding "r" nearest neighbours of a molecule, projecting
+#    the vectors joining the molecule with neighbours onto the plane given by "[Miller indices]" with respect to the
+#    simulation box, computing angles phi_j (j is the index of neighbour) which projections form with an arbitrary
+#    direction on this plane an then calculating
+#    psi_r = 1/r sum_j exp(i r phi_j).
+#    At the end, absolute value of psi_r is averaged over all molecules in the system.
+#    "[Miller indices]" should be in format "h.k.l" (negative values are allowed). At least one rank should be given.
+#    Constituent values:
+#    8.x. "psi[rank]"
+#         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
