--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -399,8 +399,14 @@ recordingFilename = recording_gas.ramtrj
 #    At the end, absolute value of psi_r is averaged over all molecules in the system.
 #    "[Miller indices]" should be in format "h.k.l" (negative values are allowed). At least one rank should be given.
 #    Constituent values:
-#    8.x. "psi[rank]"
+#    9.x. "psi[rank]"
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
+# 10. "rotationMatrixDrift"
+#    mean squared Frobenius norm of the expression M M^T - 1, where M is an orientation of a molecule (averaging is done
+#    over all molecules in the system). This observable is useful to track the drift of orientation matrix errors
+#    cumulating during the simulation
+#    10.1. "F^2"
+#          mean squared Frobenius norm; INTERVAL VALUE
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
