RotationMatrixDrift documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -402,11 +402,14 @@ recordingFilename = recording_gas.ramtrj
 #    9.x. "psi[rank]"
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
 # 10. "rotationMatrixDrift"
-#    mean squared Frobenius norm of the expression M M^T - 1, where M is an orientation of a molecule (averaging is done
-#    over all molecules in the system). This observable is useful to track the drift of orientation matrix errors
-#    cumulating during the simulation
+#    squared Frobenius norm of the expression M M^T - 1, where M is an orientation of a given molecule. This observable
+#    is useful to track the drift of orientation matrix errors cumulating during the simulation
 #    10.1. "F^2"
-#          mean squared Frobenius norm; INTERVAL VALUE
+#          mean squared Frobenius norm, averages over all molecules in a snapshot; INTERVAL VALUE
+#    10.2. "min(F^2)"
+#          minimal squared Frobenius norm in a snapshot; INTERVAL VALUE
+#    10.3. "max(F^2)"
+#          maximal squared Frobenius norm in a snapshot; INTERVAL VALUE
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
