Some fixes in Simulation

--- a/sample_inputs/overlap_reduction.ini
+++ b/sample_inputs/overlap_reduction.ini
@@ -7,8 +7,7 @@
 initialDimensions = 7 7 7
 initialArrangement = lattice default
 numOfParticles = 512
-positionStepSize = 0.5
-rotationStepSize = 0.1
+moveTypes = rototranslation 0.5 0.1
 scalingType = delta V
 volumeStepSize = 0.5
 seed = 1234
