New observable values documentation

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -373,12 +373,24 @@ recordingFilename = recording_gas.ramtrj
 #    values:
 #    6.1. "varE"
 #         variance of potential energy per particle; INTERVAL VALUE
-# 7. "nematicOrder"
+# 7. "nematicOrder (dumpQTensor)"
 #    P2 nematic order parameter computed as the highest magnitude eigenvalue of the nematic Q tensor. Main molecular
 #    axes are shape-specific. Constituent values:
 #    7.1. "P2"
 #         nematic P2 parameter; INTERVAL VALUE
-# 8. "smecticOrder ([n_x max] [n_y max] [n_z max])"
+#    7.2. "Q_11"
+#         (only if "dumpQTensor" specified) matrix element (1, 1) of Q-tensor; INTERVAL VALUE
+#    7.3. "Q_12"
+#         (only if "dumpQTensor" specified) matrix element (1, 2) of Q-tensor; INTERVAL VALUE
+#    7.4. "Q_13"
+#         (only if "dumpQTensor" specified) matrix element (1, 3) of Q-tensor; INTERVAL VALUE
+#    7.5. "Q_22"
+#         (only if "dumpQTensor" specified) matrix element (2, 2) of Q-tensor; INTERVAL VALUE
+#    7.6. "Q_23"
+#         (only if "dumpQTensor" specified) matrix element (2, 3) of Q-tensor; INTERVAL VALUE
+#    7.7. "Q_33"
+#         (only if "dumpQTensor" specified) matrix element (3, 3) of Q-tensor; INTERVAL VALUE
+# 8. "smecticOrder ([n_x max] [n_y max] [n_z max]) (dumpTauVector)"
 #    absolute value of smectic tau parameter (normalized by number density - 1 means maximal smectic order). The
 #    tau value depends on the wavevector of smectic order parameter. Here, the one giving the highest value of taus
 #    is selected from all PBC-compatible alternatives given by:
@@ -388,8 +400,14 @@ recordingFilename = recording_gas.ramtrj
 #    parameter "[n_alpha max]". If it is not specified, it defaults to 5. Constituent values:
 #    8.1. "tau"
 #         absolute value of smectic order parameter; INTERVAL VALUE
-#    8.2. "k_tau"
-#         the wavevector of smetcic order parameter in the format "[n_x].[n_y].[n_z]"; NOMINAL VALUE
+#    8.2. "k_x"
+#         (only if "dumpTauVector" specified) x coordinate of the wavevector of smectic order parameter; INTERVAL VALUE
+#    8.3. "k_y"
+#         (only if "dumpTauVector" specified) x coordinate of the wavevector of smectic order parameter; INTERVAL VALUE
+#    8.4. "k_z"
+#         (only if "dumpTauVector" specified) x coordinate of the wavevector of smectic order parameter; INTERVAL VALUE
+#    8.5. "k_tau"
+#         the wavevector of smectic order parameter in the format "[n_x].[n_y].[n_z]"; NOMINAL VALUE
 # 9. "bondOrder [Miller indices] [rank 1] [rank 2] ..."
 #    bond order parameter of a given rank "r" is computed by finding "r" nearest neighbours of a molecule, projecting
 #    the vectors joining the molecule with neighbours onto the plane given by "[Miller indices]" with respect to the
