BondOrder documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -411,12 +411,13 @@ recordingFilename = recording_gas.ramtrj
 # 9. "bondOrder [Miller indices] [rank 1] [rank 2] ..."
 #    bond order parameter of a given rank "r" is computed by finding "r" nearest neighbours of a molecule, projecting
 #    the vectors joining the molecule with neighbours onto the plane given by "[Miller indices]" with respect to the
-#    simulation box, computing angles phi_j (j is the index of neighbour) which projections form with an arbitrary
+#    simulation box, computing angles phi_j (j is the index of a neighbour) between the projections and an arbitrary
 #    direction on this plane an then calculating
 #    psi_r = 1/r sum_j exp(i r phi_j).
-#    At the end, absolute value of psi_r is averaged over all molecules in the system.
-#    "[Miller indices]" should be in format "h.k.l" (negative values are allowed). At least one rank should be given.
-#    Constituent values:
+#    Nearest neighbours are also calculated using a projection onto a nearest smectic layer defined by
+#    "[Miller indices]" (layer association is done using complex phase of the smectic parameter). Finally, the absolute
+#    value of psi_r is averaged over all molecules in the system. "[Miller indices]" should be in format "[h].[k].[l]"
+#    (negative values are allowed). At least one rank should be given. Constituent values:
 #    9.x. "psi[rank]"
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
 # 10. "rotationMatrixDrift"
