Initial arrangement user manual, last tweaks

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -30,74 +30,135 @@
 # Below is the full list of general parameters with a detailed description of each.
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
-# 1. "[x length] [y length] [z length]"
-#    explicit box side lengths
-# 2. "auto"
-#    box size will be calculated automatically based on cell size from "initialArrangement"; this variant is supported
-#    for variants 1.2, 1.4 and 2 of "initialArrangement"
+# 1. "[side length]"
+#    cubic box with a given side length
+# 2. "[x length] [y length] [z length]"
+#    explicit box side lengths of a cuboidal cell
+# 3. "[1st side x] [... y] [... z] [2nd side x] [... y] [... z] [3rd side x] [... y] [... z]"
+#    explicit coordinates of triclinic box vectors
+# 4. "auto"
+#    box size will be calculated automatically based on cell size from "initialArrangement"
 initialDimensions = 100 100 100
 
-# Initial arrangement of particles. Supported variants are 1. "orthorhombic" and 2. "presimulated" arrangement. The
-# orthorhombic simulation box has cuboidal shape an a single particle in the unit cell. It has the following variants:
-# 1.1. "orthorhombic ([clinicity]) ([polarization]) default"
-#      cubic lattice of N x N x N particles with cell size calculated based on "initialDimensions" ("auto" value is
-#      forbidden). N is calculated as a ceiling of cube root of "numOfParticles" parameter. "[polarization]" and
-#      "[clinicity]" are optional parameters allowing to create antipolar and/or tilted layouts. They are described
-#      below
-# 1.2. "orthorhombic ([clinicity]) ([polarization]) spacing [spacing value] [axis order] [num molecules x] [... y] \
-#       [... z]"
-#      this variant automatically optimizes cell size for "[num molecules x]" times "[... y]" times "[... z]" lattice,
-#      so that the distance between the molecules is "[spacing value]". The box size is always fitted automatically -
-#      the value from "initialDimensions" is ignored. The procedure is performed as follows: first the algorithm
-#      calculates the minimal lattice cell dimensions (so that all particles are tangent). The optimization is performed
-#      axis-by-axis in the order given by "[axis order]", for example "xzy". In the exemplary "xzy" case, the optimizer
-#      will create a dilute lattice (with the target polarization, clinicity and number of particles), then it will
-#      maximally shrink the packing: first in x direction, after that in z direction and finally in y direction.
-#      Orientations of particle are not changed, only the mass centres. Finally, the obtained cell sizes will be
-#      increased by "[spacing value]". The final result may vary depending on "[axis order]", however the configuration
-#      is guaranteed not to overlap. The order giving the optimal spacing should be carefully chosen basing on the
-#      molecule's shape. The "preview" program mode may come in handy (see README.md or ./rampack --help)
-# 1.3. "orthorhombic ([clinicity]) ([polarization]) [num molecules x] [... y] [... z]
-#      this variant calculates lattice cell dimensions based on "initialDimensions" parameter and number or molecules in
-#      each direction of the lattice: [num molecules x], [... y] and [... z]
-# 1.4. "orthorhombic ([clinicity]) ([polarization]) [num molecules x] [... y] [... z] [cell size x] [... y] [... z]
-#      in this variant cell length and number of molecules in each direction is specified explicitly. If the box size
-#      is specified explicitly in "initialDimensions" and is bigger than the whole lattice, the lattice will be placed
-#      in the middle of the simulation box. For "initialDimensions = auto", the box size will be fitted to the lattice
+# Initial arrangement. It is generated first by creating a lattice of a specific type, then some lattice transformations
+# may be applied. At the end, a way of choosing unoccupied spots (if a number of particles is smaller than the number of
+# slots available) may be given. General syntax:
 #
-# In all cases "numberOfParticles" parameter is respected - when the product of number of particles in each direction of
-# the lattice is bigger, some slots will not be filled. For example 10 x 10 x 10 lattice for 500 particles will be
-# filled exactly in half (leaving the other half of the simulation box empty).
+# "[cell specification]" | "[transformation 1]" | ... | "[transformation n]" | "[population scheme]"
 #
-# "[clinicity]"
-# controls the tilt within the layer of particles occurring for example in smectic and crystal phases. The wavevector of
-# layers (the direction orthogonal to layer planes) is given by "[polarization axis]" in "[polarization]"
-# - "[polarization]" has to be always specified together with "[clinicity]". "[clinicity]" has the format:
+# Optional transformations can be stacked together and are separated using a pipe "|". Population scheme is also
+# optional (implicit behaviour is equivalent to "populate serial xyz" - see below).
 #
-# "{synclinic|anticlinic} [tilt axis] [tilt angle]"
+# "[cell specification]" specifies the type of a unit cell and a number of those cells. Variants:
+# 1. "[cell specification]" := "[cell type] default"
+#    create n x n x n (where n is chosen automatically) lattice just large enough to accommodate all particles.
+#    "initialDimensions" cannot be "auto" in this variant - cell dimensions are inferred from the box size.
+# 2. "[cell specification]" := "[cell type] ncell [nx] [ny] [nz]"
+#    number of cells is specified explicitly. Cell dimensions are calculated based on the box size (thus is cannot be
+#    "auto" in this case)
+# 3. "[cell specification]" := "[cell type] ncell [nx] [ny] [nz] dim [cell dim]"
+#    both number of cells ("[nx] [ny] [nz]") and cell dimensions ("[cell dim]") are specified explicitly. Box dimensions
+#    have to be "auto" - they are calculated based on lattice dimensions. "[cell dim]" can be:
+#    3.1 "[cell dim]" := "[linear size]"
+#    3.2 "[cell dim]" := "[x length] [y length] [z length]"
+#    3.3 "[cell dim]" := "[1st side x] [... y] [... z] [2nd side x] [... y] [... z] [3rd side x] [... y] [... z]"
+#    Variants 3.2 and 3.3 have identical meaning as variants 2. and 3. of "initialDimensions". Variant 3.1 is more
+#    subtle and depends on "[cell type]" (see below). For cubic types "sc", "bcc", "fcc" and "custom" type the cell is
+#    then cubic and "[linear size]" is the side length of the cube. For hexagonal types "hcp", "hexagonal" this variant
+#    DOES NOT produce a cubic cell, but a cuboidal one with such dimensions that spheres with appropriate radius placed
+#    in this cell would be tangent (which would not be possible in a cubic cell). The specific dimensions are described
+#    below in "[cell type]" specification.
 #
-# "synclinic" means that in each layer particles are tilted in the same direction, "anticlinic" - in one direction for
-# even layers and in the other direction for odd layers. The tilt is applied by rotating each molecule around
-# "[tilt axis]" ("x", "y" or "z") by +/- "[tilt angle]" degrees. If "[clinicity]" is not specified, it defaults
-# to no tilt at all.
+# "[cell type]" specifies how many molecules are in the cell and where they are placed. Note that it does not force
+# the shape of the cell, but only the number and placement of molecules withing the cell (the shape is controlled by the
+# "ncell" and "dim" arguments from "[cell specification]" as well as simulation box dimensions - see above). Supported
+# variants:
+# 1. "sc"
+#    Simple cubic (a single particle in the middle)
+# 2. "bcc"
+#    Body centred cubic (positions relative to cell: {0.25, 0.25, 0.25}, {0.75, 0.75, 0.75})
+# 3. "fcc"
+#    Face centred cubic (positions relative to cell: {0.25, 0.25, 0.25}, {0.25, 0.75, 0.75}, {0.75, 0.25, 0.75},
+#    {0.75, 0.75, 0.25})
+# 4. "hcp axis [ax]"
+#    Hexagonal close packed. "[ax]" specifies orientation of the cell - it is the direction orthogonal to hexagonal
+#    honeycombs. Relative positions for "[ax]" = "z" are: {1/4, 1/12, 1/4}, {3/4, 7/12, 1/4}, {1/4, 5/12, 3/4},
+#    {3/4, 11/12, 3/4}. Variant 3.1 of "[cell dim]" specifying linear size L (for "[ax]" = "z") produces cuboidal cell
+#    of size {L, sqrt(3)*L, 2*sqrt(6)*L/3}. For "[ax]" = "x", "y" everything is permuted cyclically.
+# 5. "hexagonal axis [ax]"
+#    Hexagonal cell. "[ax]" specifies orientation of the cell - it is the direction orthogonal to hexagonal honeycombs,
+#    stacked along it (without any alternation as for hcp lattice). Relative positions for "[ax]" = "z" are:
+#    {1/4, 1/4, 1/2}, {3/4, 3/4, 1/2}. Variant 3.1 of "[cell dim]" specifying linear size L (for "[ax]" = "z") produces
+#    cuboidal cell of size {L, sqrt(3)*L, L}. For "[ax]" = "x", "y" everything is permuted cyclically.
+# 6. "custom shapes [shape 1] , ... , [shape n]"
+#    Custom unit cell with arbitrary shape positions and orientation. Shapes are separated using commas ",".
+#    "[shape]" has 2 variants:
+#    6.1. "[shape]" := "[pos x] [pos y] [pos z]"
+#         Specifies default-oriented shape with a given position as relative coordinates within the cell (in the range
+#         [0, 1))
+#    6.2. "[shape]" := "[pos x] [pos y] [pos z] [rot x] [rot y] [rot z]"
+#         Specifies a shape with a given position as relative coordinates within the cell (in the range [0, 1)) and with
+#         orientation specified by angles of rotations (in degrees) around z, y and x axes (in this order)
 #
-# "[polarization]"
-# controls the polarization within layers and specifies the actual direction of them (direction orthogonal to layer's
-# plane). It has the format:
+# All keywords in "[cell specification]": "ncell", "dim", "default", "axis", "shapes" may appear in an arbitrary order
+# (possibly different then the one presented in the specification). For example "hcp axis x ncell 5 10 15 dim 2" is the
+# same as "hcp dim 2 ncell 5 10 15 axis x".
 #
-# "{polar|antipolar} [polarization axis]"
+# "[transformation]" specifies an optional transformation of a lattice (which can be stacked together). Available
+# transformations:
+# 1. "optimizeCell [spacing] [axis order]"
+#    Optimization of cell dimensions. It maximally shrinks the lattice (axis by axis, in an order given by
+#    "[axis order]") without introducing overlaps in directions of lattice vectors (so that the angles remain
+#    unchanged). Afterwards, it expands the lattice by "[spacing]" in the directions of CELL HEIGHTS (not lattice
+#    vectors), also preserving the angles.
+# 2. "columnar [column axis] [rng seed]"
+#    Creates a columnar phase from the lattice - it identifies columns along axis "[column axis]" (using relative cell
+#    coordinates) and translates them by a random amount in columns's direction (along a lattice vector). "[rng seed]"
+#    specifies a seed of a random number generator used to sample random translations. Works only for periodic lattices.
+# 3. "randomizeFlip [rnd seed]"
+#    With a probability 1/2, it rotates each molecule by 180 degrees around a secondary axis placed in a geometric
+#    origin. Therefore, on average, half of the particles will be "flipped".
+# 4. "layerRotate [layer axis] [rot. axis] [rot. angle] (alternating)"
+#    It identifies layers in the lattice in "[layer axis]" direction and rotates particles by "[rot. angle]" degrees
+#    around "[rot. axis]" axis. If "alternating" is specified, molecules within even layers will be rotated
+#    counter-clockwise and in odd layers - clockwise. If only one layer is identified within a unit cell (for example in
+#    a sc lattice), 2 unit cells will be joined (the same is true for any odd number of layers in a unit cell). Works
+#    only for periodic lattices. If "alternating" is not specified, all molecules are rotated by a same angle,
+#    counter-clockwise.
 #
-# "polar" means that all secondary axes (polarization axes) of particles are oriented in the same direction (the default
-# orientation of the particle), while for "antipolar" interchangeably - particles in even layers are not rotated, while
-# in odd layers they are rotated by 180 degrees around the "[polarization axis]". "[polarization axis]" thus defines the
-# wavevector of layering. "(polarization)" can be specified without "(clinicity)", however the former is required for
-# the latter and then "[polarization axis]" also controls clinicity
+# "[population scheme]" describes how lattice should be filled with particles (if their number is smaller than the
+# number of slots in the lattice). Variants:
+# 1. "[population scheme]" := "populate serial ([axis order])"
+#    Populates the lattice cell by cell looping through cell indices. The order of loops is given, from outermost to
+#    innermost, by "[axis order]". For example, for "[axis order]" = "yxz", first z column is filled, then zx plane is
+#    filled with those columns, and lastly those planes are stacked in y direction. Within a cell, molecules are placed
+#    in the order in which they appear within the cell. Default values of "[axis order]" is "xyz".
+# 2. "[population scheme]" := "random [rng seed]"
+#    Molecules are placed at random using RNG sequence seeded with "[rng seed]". However, their order is not completely
+#    random - particles with close indices will have relatively close real-space positions (for a better cache
+#    performance).
 #
-# "presimulated" arrangement has a single variant:
-# 2. "presimulated [dat packing file name]"
-#    it loads the initial configuration from internal dat packing representation, which can be for example the final
-#    snapshot of other simulation or be generated using ./rampack preview mode
-initialArrangement = lattice default
+# Here are a few of examples of initial configurations which can be created:
+# 1. "initialDimensions = 10"
+#    "initialArrangement = sc default"
+#    "numOfParticles = 1000"
+#    Create a simple cubic lattice of 10 x 10 x 10 cells, where the cells are cubes of size 1 x 1 x 1
+# 2. "initialDimensions = 100"
+#    "initialArrangement = sc ncell 5 10 20 | optimizeCell 0.1 xyz | populate random"
+#    "numOfParticles = 500"
+#    Create a simple cubic lattice of 5 x 10 x 20 cells, optimize particle distance to 0.1 in each direction and then
+#    populate half of slots with molecules at random.
+# 3. "initialDimensions = auto"
+#    "initialArrangement = hcp ncell 2 10 10 dim 10 | layerRotate x y 30 alternating | optimizeCell 0.1 yzx"
+#    Create a hcp lattice, perform alternating rotation around y axis by 30 degrees, of layers along x axis (there are
+#    2 hcp cells in this direction, so 4 layers altogether) and then shrink the cell size first optimizing distances
+#    within the layers and then the distances between the layers. The resulting structure is anticlinic crystal I
+#    (hexagonal order within a layer and alternating layer tilt)
+# 4. "initialDimensions = auto"
+#    "initialArrangement = hexagonal ncell 4 10 10 dim 10 | optimizeCell 0.1 yzx | columnar x 1234 | randomizeFlip 1234"
+#    Creates hexagonal lattice, optimizes cell size, makes the cell columnar along x axis and randomizes flips. All RNG
+#    seeds were equal 1234. The resulting phase is Col_h phase along x axis with random flips.
+initialArrangement = sc default
 
 # The number of molecules to be simulated
 numOfParticles = 1000
