Compile fixes for GCC 8.3.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ if(OpenMP_CXX_FOUND)
     link_libraries(OpenMP::OpenMP_CXX)
 endif()
 
+link_libraries(stdc++fs)
+
 # Now we can safely add submodule subdirectories
 add_subdirectory(extern/Catch2)
 add_subdirectory(extern/trompeloeil)
