Documentation, small tweaks

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -110,15 +110,21 @@ initialDimensions = 100 100 100
 #    Optimization of cell dimensions. It maximally shrinks the lattice (axis by axis, in an order given by
 #    "[axis order]") without introducing overlaps in directions of lattice vectors (so that the angles remain
 #    unchanged). Afterwards, it expands the lattice by "[spacing]" in the directions of CELL HEIGHTS (not lattice
-#    vectors), also preserving the angles.
-# 2. "columnar [column axis] [rng seed]"
+#    vectors, however the two are the same for cubic/cuboidal cells), also preserving the angles.
+# 2. "optimizeLayers [spacing] [layer axis]"
+#    Optimization of the distances between particles and cell dimensions in a direction given by "[layer axis]", in a
+#    layer-wise fashion. First, it identifies layers and makes them tangent (first making 1st and 2nd layer tangent,
+#    then 2nd and 3rd, etc). Then, it optimizes cell dimension so that layers of adjacent cells are tangent. Afterwards,
+#    it introduces a spacing "[spacing]" between all layers in the directions of CELL HEIGHTS (not lattice vectors,
+#    however the two are the same for cubic/cuboidal cells). Box angles are preserved in the whole procedure.
+# 3. "columnar [column axis] [rng seed]"
 #    Creates a columnar phase from the lattice - it identifies columns along axis "[column axis]" (using relative cell
-#    coordinates) and translates them by a random amount in columns's direction (along a lattice vector). "[rng seed]"
+#    coordinates) and translates them by a random amount in columns' direction (along a lattice vector). "[rng seed]"
 #    specifies a seed of a random number generator used to sample random translations. Works only for periodic lattices.
-# 3. "randomizeFlip [rnd seed]"
+# 4. "randomizeFlip [rnd seed]"
 #    With a probability 1/2, it rotates each molecule by 180 degrees around a secondary axis placed in a geometric
 #    origin. Therefore, on average, half of the particles will be "flipped".
-# 4. "layerRotate [layer axis] [rot. axis] [rot. angle] (alternating)"
+# 5. "layerRotate [layer axis] [rot. axis] [rot. angle] (alternating)"
 #    It identifies layers in the lattice in "[layer axis]" direction and rotates particles by "[rot. angle]" degrees
 #    around "[rot. axis]" axis. If "alternating" is specified, molecules within even layers will be rotated
 #    counter-clockwise and in odd layers - clockwise. If only one layer is identified within a unit cell (for example in
