Documentation of dynamic parameters

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -337,10 +337,30 @@ saveOnSignal = true
 # unique name of the run
 [integration.gas]
 
-# Temperature in k_B units
+# Temperature in k_B units. The temperature can be just a floating-point constant, or a dynamic parameter, which changes
+# based on a current simulation cycles. Available dynamic parameters:
+# 1. const [value]
+#    A constant parameter, which always has the same value. It is exactly the same as just passing a single number.
+# 2. linear [initial value] [slope]
+#    If current cycle is "[current cycle]", the value is calculated as "[initial value]" + "[slope]" * "[current cycle]"
+# 3. exp [initial value] [rate]
+#    If current cycle is "[current cycle]", the value is calculated as
+#    [initial value]" * exp("[rate]" * "[current cycle]")
+# 4. piecewise [cycle 1] [parameter 1] , [cycle 2] [parameter 2] , ...
+#    A piecewise combination of dynamic parameters. The parameters are separated by commas. First, the number of cycle
+#    "[cycle ...]" is given when the specific parameter should start, and then parameter specification
+#    "[parameter ...]", (as in 1. - 3.). "[cycle 1]" has to be equal 0 and subsequent "[cycle ...]"-s should be in an
+#    ascending order. Constituent parameters are shifted so that they always start from 0. As an example:
+#       "piecewise 0 const 10 , 1000 linear 10 0.01 , 2000 20"
+#    There, in cycles 0-999 temperature is constant and equal 10, then in cycles 1000-1999 it grows linearly to 20
+#    (to be precise, at cycle 1999 it is 19.99), and then it becomes 20 in 2000-th cycle and stays as such indefinitely.
+#    Note, that for the 3-rd parameter a single value "20" was used equivalently to "const 20".
+# It is important to note that last change of the temperature happens after the last thermalisation cycle and is frozen
+# in the averaging stage. It is advisable to use a constant temperature for some number of cycles in the last part of
+# the thermalization stage.
 temperature = 1
 
-# Pressure
+# Pressure. It can be a floating-point constant or a dynamic parameter (see "temperature" for reference)
 pressure = 0.1
 
 # For how many full MC cycles the thermalization should be performed
