Missing documentation and tests fix

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -509,13 +509,21 @@ recordingFilename = recording_gas.ramtrj
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
 # 10. "rotationMatrixDrift"
 #    squared Frobenius norm of the expression M M^T - 1, where M is an orientation of a given molecule. This observable
-#    is useful to track the drift of orientation matrix errors cumulating during the simulation
+#    is useful to track the drift of orientation matrix errors cumulating during the simulation. Constituent values:
 #    10.1. "F^2"
 #          mean squared Frobenius norm, averages over all molecules in a snapshot; INTERVAL VALUE
 #    10.2. "min(F^2)"
 #          minimal squared Frobenius norm in a snapshot; INTERVAL VALUE
 #    10.3. "max(F^2)"
 #          maximal squared Frobenius norm in a snapshot; INTERVAL VALUE
+# 11. "temperature"
+#    current temperature of the system. Constituent values:
+#    11.1. "T"
+#          the temperature; INTERVAL VALUE
+# 12. "pressure"
+#    current pressure of the system. Constituent values:
+#    12.1. "p"
+#          the pressure; INTERVAL VALUE
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
